--- a/Questions.Rmd
+++ b/Questions.Rmd
@@ -1,10 +1,10 @@
 ---
 title: "MVA Course"
 output:
-  html_notebook: default
-  pdf_document: default
   html_document:
     df_print: paged
+  pdf_document: default
+  html_notebook: default
 ---
 ```{r setup, include=FALSE, message=FALSE, warning=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -72,7 +72,6 @@ The "dune" dataset we will use is included in the vegan package (an extensive co
 ***
 
 <br>
-##Q2
 
 ### <span style="color:cornflowerblue">Question 2: Simple exercise for illustrating effects of different distance metrics.</span>
 
@@ -98,14 +97,10 @@ help(vegdist)
 
 ```
               
-
 <br>
 
 ***
-
 <br>
- 
-##Q3
 
 ### <span style="color:cornflowerblue">Question 3: In this	exercise we will use Principal Components Analysis on the dune meadow explanatory data. We will also explore the effects of different kinds of scaling on the ordination plot. NOTE that the scaling issues applies to all ordination techniques! </span>
 
@@ -196,9 +191,6 @@ par(mfrow = c(1,1))
 
 <br>
  
- 
-
-##Q4
 
 ### <span style="color:cornflowerblue">Question 4: Do a CA-ordination on the Dune Meadow species dataset.What are the results telling you? </span>
 
@@ -220,8 +212,6 @@ summary(eigenvals(dune.ca)) #proportion variance explained
 
 <br>
 
-
-##Q5
 
 ### <span style="color:cornflowerblue">Question 5: Repeat exercise 4, but with DCA ordination instead. </span>
 
@@ -245,7 +235,6 @@ plot(dune.dca)
 ***
 
 <br>
-##Q6
 
 ### <span style="color:cornflowerblue">Question 6: Add one new species with cover degree 9 at the site with the lowest number of species. Do a new DCA-ordination.</span>
 
@@ -282,9 +271,7 @@ code for the question 5.
 
 <br>
 
-##Q7
-
-### <span style="color:cornflowerblue">Question 7:	Effects from increased variation. Add one new sample to the data, then add a cover of 9 for the existing species Chenopodium album "Che_alb" in the new sample. Make a new DCA-ordination. <p>Next, remove the Che alb = 9, and add instead a cover of 5 for the exisiting species Leo_aut and make a new DCA. </span>
+### <span style="color:cornflowerblue">Question 7:	Effects from increased variation. Add one new sample to the data, then add a cover of 9 for the existing species Chenopodium album "Che_alb" in the new sample. Make a new DCA-ordination. <br> Next, remove the Che alb = 9, and add instead a cover of 5 for the exisiting species Leo_aut and make a new DCA. </span>
 
 #### <span style="color:forestgreen"> What happens with the eigenvalues and ordination after adding Che alb and after adding Leo aut? Why did we choose to add these two species in the new sample? </span>
 
@@ -317,25 +304,102 @@ ordiplot(DCANewSample, type="text", main="DCA with new sample Leontodon autumnal
 
 ***
 
+### <span style="color:cornflowerblue">Question 8:Principal Coordinates Analysis (PCoA) </span>
+Principal Coordinates Analysis (PCoA), also known as Multidimensional Scaling (MDS), is a generalization of the ordination techniques we have already seen as it can be estimated with any distance matrix. In contrast, PCA is restricted to Euclidean distances while CA preserves Chi-Square distances.
+Here, we will explore PCoA on four different distance matrices: 
+(i)   Bray-Curtis
+(ii)  Jaccard
+(iii) Euclidean
+(iv)  Mahalanobis
+
+The R base statistics library offers the routine cmdscale() for performing MDS. There are numerous other libraries offering PCoA analysis
+#### <span style="color:forestgreen"> After performing the four PCoA analyses, please answer the following questions:
+(i) 	How similar are the ordination plots from the four distance matrices?
+(ii)	Why are some plots more similar than others?
+(iii)	Which PCoA plot is most similar to the output from a PCA?
+(iv)	Which PCoA plot is most similar to the output from a CA? </span>
 <br>
-##Q8
+```{r}
+# generate the four distance matrices
+dune.bray.distance.matrix<-vegdist(dune,method="bray")
+dune.jaccard.distance.matrix<-vegdist(dune,method="jaccard")
+dune.euclidean.distance.matrix<-vegdist(dune,method="euclidean")
+dune.mahalanobis.distance.matrix<-vegdist(dune,method="mahalanobis")
+#
+# what can be accomplished with the MDS routine?
+#
+help(cmdscale)
+#
+# run an MDS using cmdscale() for each of the four distance matrices
+#
+dune.bray.location<-cmdscale(dune.bray.distance.matrix)
+dune.jaccard.location<-cmdscale(dune.jaccard.distance.matrix)
+dune.euclidean.location<-cmdscale(dune.euclidean.distance.matrix)
+dune.mahalanobis.location<-cmdscale(dune.mahalanobis.distance.matrix)
+#
+# now take a look at some plots
+#
+plot(dune.bray.location, xlab="PCoA 1", ylab="PCoA 2")
+title(main="PCoA on Bray Curtis distances of dune sites")
+text(dune.bray.location,labels=row.names(dune.bray.location),pos=2)
+#
+plot(dune.jaccard.location, xlab="PCoA 1", ylab="PCoA 2")
+title(main="PCoA on Jaccard distances of dune sites")
+text(dune.jaccard.location,labels=row.names(dune.jaccard.location),pos=2)
+#
+plot(dune.euclidean.location, xlab="PCoA 1", ylab="PCoA 2")
+title(main="PCoA on Euclidean distances of dune sites")
+text(dune.euclidean.location,labels=row.names(dune.euclidean.location),pos=2)
+#
+plot(dune.mahalanobis.location, xlab="PCoA 1", ylab="PCoA 2")
+title(main="PCoA on Mahalanobis distances of dune sites")
+text(dune.mahalanobis.location,labels=row.names(dune.mahalanobis.location),pos=2)
+```
 
-### <span style="color:cornflowerblue">Question 8:	Non Metric Multidimensional Scaling </span>
+***
+<br>
 
-#### <span style="color:forestgreen"> Compare the NMDS ordination with the ordinations obtained using CA and DCA! What is the stress value for the NMDS? </span>
+### <span style="color:cornflowerblue">Question 9:	Non Metric Multidimensional Scaling </span>
+
+#### <span style="color:forestgreen"> At the conclusion of this exercise, you should be able to:
+(i)	State which metrics are supported in the vegan implementation of NMDS
+(ii)	Evaluate the appropriate number of dimensions for the ordination
+(iii)	Evaluate the consequences of using different distance metrics
+(iv)  Compare the vegan default NMDS to the results of a CA and a DCA </span>
 
 ```{r ex8, inclue=TRUE, warning=FALSE, message=FALSE}
-# NMDS on original data set with 2 reduced dimensions
-NMDS <- metaMDS(dune, k=2)
-NMDS
-# plot the NMDS
-ordiplot(NMDS, type="text", main="NMDS")
+# run NMDS with the defaults and 2 dimensions, what is the stress?
+#
+dune.NMDS.bray.2<-metaMDS(dune,k=2)
+#
+# run NMDS with the defaults and 3 dimensions, what is the stress ?
+#
+dune.NMDS.bray.2<-metaMDS(dune,k=3)
+#
+# what happens when Euclidean distances are used?
+#
+dune.NMDS.euclidean.2<-metaMDS(dune,k=2)
+#
+# plot some results
+#
+ordiplot(dune.NMDS.bray.2, type="text", main="NMDS from Bray Curtis distance, 2 Dimensions")
+ordiplot(dune.NMDS.euclidean.2, type="text", main="NMDS from Euclidean distance, 2 Dimensions")
+#
+# create Shepard plots to show how the stress evolves
+#
+stressplot(dune.NMDS.bray.2)
+stressplot(dune.NMDS.euclidean.2)
+#
+# generate the CA and DCA results
+#
+dune.CA<-cca(dune)
+dune.DCA<-decorana(dune)
+#
+# plot the CA and DCA results
+#
+ordiplot(dune.CA, type="text", main="CA on Dune Meadow data")
+ordiplot(dune.DCA, type="text", main="DCA on Dune Meadow data")
 
-#plot the CA
-ordiplot(dune.ca, type="text", main="DCA")
-
-#plot the DCA
-ordiplot(dune.dca, type="text", main="DCA")
 
 ```
 
@@ -343,19 +407,8 @@ ordiplot(dune.dca, type="text", main="DCA")
 
 ***
 
-##Q9
 
-### <span style="color:cornflowerblue">Question 9:	PCoA </span>
-
-#### <span style="color:forestgreen"> PCoA </span>
-<br>
-```{r}
-#To follow, Martyn
-```
-
-##Q10
-
-###<span style="color:cornflowerblue">Question 10: Data Quality Assessment</span>
+### <span style="color:cornflowerblue">Question 10: Data Quality Assessment</span>
 These are only a few examples on how to assess data quality. 
 
 #### <span style="color:forestgreen">Is there a pattern in the distribution of missing values that may lead to the omission of a species or a sample? Is Grubbs test a good method for finding outliers in a multivariate data set? Would you say that the original Dune Meadow data set is OK for further analyses? Motivate your answer!</span>
@@ -430,8 +483,6 @@ legend("topright",paste("SD =",round(sd(d1mean),1))) # Legend with standard devi
 
 <br>
 
-##Q11
-
 ### <span style="color:cornflowerblue">Question 11:	Do an RDA and a CCA on the Dune Meadow data set, using the full set of environmental variables.  </span>
 
 #### <span style="color:forestgreen"> Compare the ordination diagrams and numerical results! What does the significance test tell you? When only looking at the results, which method explains the variation best? Taking the nature of the data into account, which method should be used?  </span>
@@ -457,7 +508,6 @@ ordiplot(dune.cca, type="text", main="CCA")
 ***
 
 <br>
-##Q12
 
 ### <span style="color:cornflowerblue">Question 12:	Use the results from the CCA ordination in exercise 11 to look at and interpret the variance inflation factor, and to look for warnings about outliers in the explanatory data!   </span>
 
@@ -476,7 +526,6 @@ Function vif.cca gives the variance inflation factors for each constraint or con
 ***
 
 <br>
-##Q13
 
 ### <span style="color:cornflowerblue">Question 13:	Do a CA on the Dune Meadow data set, with the full set of environmental variables included in the analysis, and compare with a CCA on the same data sets. </span>
 
@@ -499,7 +548,6 @@ ordiplot(dune.cca, type="text", main="CA")
 <br>
 
 ***
-##Q14
 
 ### <span style="color:cornflowerblue">Question 14:	Site scores can be calculated in two ways; Weighted Average and Linear Combination. Here you will do both and compare the results. Both options are available in most software, but the default varies.</span>
 
@@ -540,7 +588,6 @@ par(mfrow= c(1,1))
 ```
 
 <br>
-##Q15
 
 ### <span style="color:cornflowerblue"> Question 15:	Next, you should investigate whether the four different management regimes (SF standard farming, BF biodynamical farming, HF hobby farming, and NM nature management) have any effect on the species distribution. This is done by using these four management types as environmental variables in a constrained ordination.  </span>
 
@@ -567,7 +614,6 @@ ordihull(dune.ccaMN,groups = dune.env.original$Management,draw = "polygon",col =
 
 <br>
 
-##Q16
 
 ### <span style="color:cornflowerblue">Question 16:	Next, you want to investigate whether initial soil characteristics (A1 and moisture) also are important for differences in species composition between fields? To do this, do another CCA with A1 and Moisture as environmental variables and perform a significance test.   </span>
 
@@ -593,8 +639,6 @@ ordiplot(dune.ccaA1ms, type="text", main="CCA A1 and moisture")
 
 ## Direct methods with testing of environmental variables
 
-##Q17
-
 ### <span style="color:cornflowerblue"> Question 17: Partial ordination    </span>
 
 Now, you have concluded that both soil characteristics and management type are determining the species composition significantly. But, what if the observed differences between management types are not caused by management type but by initial differences in soil characteristics? To investigate this, you have to test whether there still is a difference in vegetation between management types, after accounting for (i.e. removing) the effects of soil characteristics.
@@ -619,7 +663,6 @@ ordihull(MN.cca,groups = dune.env.original$Management,draw = "polygon",col = "gr
 ***
 
 <br>
-##Q18
 
 ### <span style="color:cornflowerblue"> Question 18: The amount of applied manure is a third important variable given in the environmental data set associated with the dune meadow data set. Repeat exercise 17, but with manure added to the set of covariates. </span>
 
@@ -639,7 +682,6 @@ permutest(MN.cca2, permutations=999)
 ***
 
 <br>
-##Q19
 
 ### <span style="color:cornflowerblue"> Question 19: Forward selection </span>
 
@@ -674,7 +716,6 @@ sel.env.dune_adj$anova
 ***
 
 <br>
-##Q20
 
 ### <span style="color:cornflowerblue">Question 20: Interpreting ordination results using species traits </span>
 
@@ -719,7 +760,6 @@ step2$anova # which three are most significant in the final selection?
 <br>
 
 
-##Q21
 
 ### <span style="color:cornflowerblue">Question 21: Decomposition of variance </span>
 
@@ -765,7 +805,6 @@ plot (varp, digits = 2, Xnames = c('Management', 'Soil'), bg = c('red', 'blue'))
 ***
 
 <br>
-##Q22
 
 ### <span style="color:cornflowerblue">Question 22: Analysing a time series with vegetation data </span>
 
@@ -817,7 +856,6 @@ ordihull(time2.cca,groups=treat,draw="polygon",col="grey70",label=T)#draw hulls 
 
 
 <br>
-##Q23
 
 ### <span style="color:cornflowerblue">Question 23: A multivariate Before-After-Control- Impact (BACI) study </span>
 
@@ -863,7 +901,6 @@ ordihull(baci.cca,groups=treat,draw="polygon",col="grey70",label=T)#draw hulls a
 
 ***
 <br>
-##Q24
 
 ### <span style="color:cornflowerblue">Question 24:	Procustes rotation and Co-correspondence analysis  </span>
 
@@ -902,7 +939,6 @@ corAxis(CoCor)
 <br>
 
 
-##Q25
 
 ### <span style="color:cornflowerblue">Question 25 : Classification </span>
 
@@ -948,16 +984,57 @@ tanglegram(dend2, dend3)
 <br>
 
 ***
-#Q26
-### <span style="color:cornflowerblue">Question 26: Classification 2 </span>
 
-#### <span style="color:forestgreen">Classification 2 </span>
+### <span style="color:cornflowerblue">Question 26: Classification 2: Partition and Regression Trees </span>
+
+Most of the code is taken from 
+https://jonlefcheck.net/2015/02/06/a-practical-guide-to-machine-learning-in-ecology/
+Here, we will use the iris data. This is a "classic" data set used for exploring multivariate 
+methods for discrimination.https://en.wikipedia.org/wiki/Iris_flower_data_set
+
+#### <span style="color:forestgreen">When you have completed the exercise, you should be able to answer the following questions:
+(i)	Based on a visual analysis, which dimensions provide the best separation between iris species?
+(ii)	Are your insights from the visual analysis confirmed by the partition tree analysis?
+(iii)	Does the partition tree provide a perfect species identification or are there misclassifications? </span>
 
 ```{r}
-#to follow
+# Before starting the analysis, we will generate pairwise scatterplots of the data
+#
+# the following line will first check to see inf the "psych" library is loaded, and only 
+# load it if it is not present
+#
+if(!is.element("psych",installed.packages()[,1])) {install.packages("psych") }
+library(psych)
+library(rpart)
+#
+# create pairwise plots of the variables in the iris data set
+#
+pairs.panels(iris[,-5],gap=0,bg=c("red","blue","yellow")[iris$Species],pch=21)
+#
+# what does rpart() do ?
+#
+help(rpart)
+#
+# set up the partition tree model for the iris data
+#
+iris.tree.model<-rpart(Species ~ Sepal.Length + Sepal.Width + Petal.Length + Petal.Width, data = iris)
+# 
+# display the partition tree
+#
+plot(iris.tree.model)
+text(iris.tree.model)
+#
+# plots for confirmatory visual analysis
+#
+plot(iris$Petal.Length, col = c("red", "blue", "forestgreen")[iris$Species], xlab = "", ylab = "Petal Length (cm)")
+legend(120, 2, c("setosa","versicolor","virginica"), col = c("red", "blue", "forestgreen"), pch = 1)
+abline(h = 2.45)
+#
+plot(iris$Petal.Width, col = c("red", "blue", "forestgreen")[iris$Species], xlab = "", ylab = "Petal Width (cm)")
+legend(20, 1.5, c("setosa","versicolor","virginica"), col = c("red", "blue", "forestgreen"), pch = 1)
+abline(h = 1.75)
 ```
 ***
-##Q27
 
 ### <span style="color:cornflowerblue">Question 27: Principal Response Curves</span>
 
@@ -967,7 +1044,6 @@ tanglegram(dend2, dend3)
 #to follow
 ```
 ***
-##Q28
 
 ### <span style="color:cornflowerblue">Question 28: Differences between groups. ANOSIM, adonis and SIMPER</span>
 
@@ -1043,7 +1119,6 @@ arrange(rownames_to_column(iva.df), desc(HF))
 
 ***
 
-##Q29
 
 ### <span style="color:cornflowerblue">Question 29: Molecular Data</span>
 
@@ -1054,7 +1129,6 @@ arrange(rownames_to_column(iva.df), desc(HF))
 ```
 ***
 <br>
-##Q30
 
 ### <span style="color:cornflowerblue">Question 30: PLS </span>
 
@@ -1066,8 +1140,8 @@ PLS regression, like PCA, seeks to find components which maximize the variabilit
 data.pls <- readRDS("Trend_Lakes_2015_PLS.RDS")
 #View(data.pls)
 library(pls)
-#Change 'Antal arter' (number of species in Swedish) to your choice of response variable(s)
-pls.fit <- plsr(`Antal arter` ~ ., data = data.pls[c(9:35)], scale = TRUE, validation = "CV")
+#Change Species_count to your choice of response variable(s)
+pls.fit <- plsr(Species_count ~ ., data = data.pls[c(9:35)], scale = TRUE, validation = "CV")
 
 #The next step is to remove unwanted variables and then build a model.  
 #Cross validation is used to find the optimal number of retained dimensions.
@@ -1077,18 +1151,20 @@ cv <- RMSEP(pls.fit)
 best.dims <- which.min(cv$val[estimate = "adjCV", , ]) - 1
 best.dims 
 # Rerun the model
-pls.fit2 <-  plsr(`Antal arter` ~ ., data = data.pls[c(6:35)], ncomp = best.dims)
+pls.fit2 <-  plsr(Species_count ~ ., data = data.pls[c(6:35)], ncomp = best.dims)
 #Finally, we extract the useful information and format the output.
 coefficients <-  coef(pls.fit2)
 sum.coef <-  sum(sapply(coefficients, abs))
 coefficients <-  coefficients * 100 / sum.coef
 coefficients <-  sort(coefficients[, 1 , 1])
 barplot(tail(coefficients, 5))
-#The regression coefficients are normalized so their absolute sum is 100 and the result is sorted.
-#The results below show that 'Tot-N_TNb' and 'Mn' are the two most important positive predictors of 'Antal arter'.  You could run the code #barplot(head(coefficients, 5)) to see that at the other end of the scale for negative predictors.
+#The regression coefficients are normalized so their absolute sum is 100 and the result is #sorted.
+#The results below show that 'Total_N' and 'Mn' are the two most important positive #predictors of 'Species_count'.  You could run the following to see the other end of the scale for negative predictors.
+barplot(head(coefficients, 5))
+#Here we see that "Fe", iron is the most important negative predictor.
 summary(pls.fit2)
 plot(pls.fit)
-validationplot(pls.fit2, val.type = "MSEP")
-predplot(pls.fit2)
 coefplot(pls.fit2)
+
+
 ```
